<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.photo.example.silich.vladislav.geolocationofphotos.AuthActivity">
    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost"
        android:theme="@style/TabWidgetTheme"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                />
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                >
                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" >
                        <EditText
                            android:id="@+id/edt_logSignIn"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gray"
                            android:hint="@string/edt_login">
                        </EditText>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" >
                        <EditText
                            android:id="@+id/edt_pasSignIn"
                            android:layout_width="200dp"
                            android:textColor="@color/gray"
                            android:inputType="textPassword"
                            android:layout_height="wrap_content"
                            android:hint="@string/edt_password">
                        </EditText>
                    </android.support.design.widget.TextInputLayout>
                    <Button
                        android:id="@+id/btnSignIn"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_log_in"
                        android:background="@color/green"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_gravity="center">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" >
                        <EditText
                            android:id="@+id/edt_loginSignUp"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/gray"
                            android:hint="@string/edt_login"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" >
                        <EditText
                            android:id="@+id/edt_pasSignUp"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@color/gray"
                            android:hint="@string/edt_password"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" >
                        <EditText
                            android:id="@+id/edt_repPasSignUp"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"
                            android:textColor="@color/gray"
                            android:inputType="textPassword"
                            android:hint="@string/edt_repeat_the_password"/>
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btnSignUp"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_sign_up"
                        android:background="@color/green"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>
